# restaurant-crm

./: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_client_registration_models.py  93160675bbfa_initial_database_schema.py
docs/: ALEMBIC_SETUP.md  STAGE_1_COMPLETION.md  STAGE_2_COMPLETION.md  project_requirements.md  requisitos_cadastro.md  software-architecture.md
src/: config.py  database.py  main.py
src/api/: auth.py  deps.py
src/api/v1/: registration.py
src/models/: __init__.py  base.py  client_registration.py
src/schemas/: auth.py  client_registration.py
src/services/: base_service.py  client_registration_service.py
src/utils/: helpers.py  security.py  templates.py
static/css/: style.css
static/js/: stage2.1.js  stage2.js
templates/: base.html
templates/admin/: dashboard.html  registrations.html
templates/auth/: login.html
templates/registration/: cnpj-step2.html  cnpj.html  cpf-step2.html  cpf.html  select_type.html  success.html
tests/: conftest.py  test_main.py
